set YARN_OPTS (heap and GC)